[package]
name = "ceeyesbot"
version = "0.1.0"
authors = ["actuday6418 <actuday6418@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/mann-ed/telegram-bot"}
tokio = {version = "1.2", features = ["full"]}
futures = "*"
reqwest="*"
serde="*"
bincode="*"
